--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@
     white-space: normal;
     word-wrap: break-word;
     font-family: monospace;
+    z-index: 2000;
     font-size: 15px;
     border-radius: 3px;
     background-color: rgb(197, 197, 197);
@@ -15,7 +16,82 @@
     background-color:rgb(134, 134, 134);
 }
 
+.dropping {
+    z-index: 2000;
+    width: 70px;
+    height: 45px;
+    white-space: normal;
+    word-wrap: break-word;
+    font-family: monospace;
+    font-size: 15px;
+    border-radius: 3px;
+    background-color: rgb(109, 101, 101);
+    color: black;
+    cursor: pointer;
+    position: absolute;
+    top: 8cm;
+}
+.dropping:hover {
+    background-color: rgb(138, 131, 131);
+}
+#dropUp {
+    left: 2cm
+}
+#drop {
+    left: 3.9cm;
+}
+#dropDown {
+    left: 5.8cm;
+}
+#dropUp::before {
+    content:url(/src/images/arrow-up.png);
+}
+#drop::before {
+    content:url(/src/images/drop.png)
+}
+#dropDown::before {
+    content:url(/src/images/down-arrow.png)
+}
+
+.placing {
+    z-index: 2000;
+    width: 70px;
+    height: 45px;
+    white-space: normal;
+    word-wrap: break-word;
+    font-family: monospace;
+    font-size: 15px;
+    border-radius: 3px;
+    background-color: rgb(109, 101, 101);
+    color: black;
+    cursor: pointer;
+    position: absolute;
+    top: 6.7cm;
+}
+.placing:hover {
+    background-color: rgb(138, 131, 131);
+}
+#placeUp {
+    left: 2cm;
+}
+#place {
+    left: 3.9cm;
+}
+#placeDown {
+    left: 5.8cm;
+}
+#placeUp::before {
+    content:url(/src/images/arrow-up.png);
+}
+#place::before {
+    content:url(/src/images/block.png)
+}
+#placeDown::before {
+    content:url(/src/images/down-arrow.png)
+}
+
 .digging {
+    z-index: 2000;
     width: 70px;
     height: 45px;
     white-space: normal;
